ostree (2017.10-1) UNRELEASED; urgency=medium

  * New upstream release
    - Update symbols file
    - Install new bash completions
  * Use dh_missing --fail-missing instead of dh_install --fail-missing

 -- Simon McVittie <smcv@debian.org>  Tue, 29 Aug 2017 16:08:09 +0100

ostree (2017.9-1) unstable; urgency=medium

  * New upstream release
    - Drop backported patch
    - Update symbols file
  * debian/rules: Adjust a comment to avoid Lintian thinking this is a
    dh_make template

 -- Simon McVittie <smcv@debian.org>  Fri, 28 Jul 2017 14:43:30 +0100

ostree (2017.8-1) unstable; urgency=medium

  * New upstream release
    - Update symbols file
    - Remove patches that are no longer needed
    - Add patch from upstream PR #1016 to fix a regression
  * Add a Breaks on flatpak (<< 0.8.7-2~), which rely on libostree to
    download the summary and its signature when mirroring.
    libostree >= 2017.7 no longer does this. On affected flatpak versions,
    this breaks installation of new apps and runtimes system-wide.
  * Add Build-Depends-Indep: libglib2.0-doc so gtk-doc can set up
    cross-references

 -- Simon McVittie <smcv@debian.org>  Wed, 19 Jul 2017 22:18:20 +0100

ostree (2017.7-1) unstable; urgency=medium

  * New upstream release
    - Update symbols file
    - Add post-release patches so test-symbols.sh passes again
    - debian/dist/: Add ostree-trivial-httpd.xml, which was incorrectly
      excluded from the upstream release
  * Standards-Version: 4.0.0
    - Use https URL for copyright-format
  * Implement <nodoc> build profile
  * Upload to unstable

 -- Simon McVittie <smcv@debian.org>  Wed, 21 Jun 2017 13:06:54 +0100

ostree (2017.6-1) experimental; urgency=medium

  * New upstream release
    - Update debian/copyright
    - Update disabled ostree-boot packaging for new systemd generator
    - Add new ABI to symbols file
  * Skip build-time tests when nocheck is in DEB_BUILD_OPTIONS
    (Closes: #862803). Thanks to Krzesimir Nowak
